--- a/index.html
+++ b/index.html
@@ -366,13 +366,14 @@ pre code {
 <p>For info about previous reading groups, please go to <a href="https://github.com/sonv/reading-group" class="uri">https://github.com/sonv/reading-group</a>.</p>
 <div id="key-information" class="section level2">
 <h2>Key information</h2>
-<p><strong>Time</strong>: Fridays, 9am-10am <strong>Place</strong>: CR 502 (except further notices)</p>
+<p><strong>Time</strong>: Fridays, 9am-10am</p>
+<p><strong>Place</strong>: CR 502 (except further notices)</p>
 <p><strong>Core members</strong> (responsible to lead): Tran Vinh Linh, Hieu Nguyen, Minh Doan, Lan Nguyen, Graeme Walker, Truong-Son Van</p>
 <p>Everyone who’s not a core member is encouraged to lead if they think they can do it.</p>
 </div>
 <div id="materials" class="section level2">
 <h2>Materials</h2>
-<p>We will follow a course on MIT Open Courseware called Blockchain and Money. All the materials (including reading materials and slides) are available here:</p>
+<p>We will follow a course on MIT Open Courseware called Blockchain and Money. All the materials (including reading materials, videos and slides) are available here:</p>
 <p><a href="https://ocw.mit.edu/courses/15-s12-blockchain-and-money-fall-2018/" class="uri">https://ocw.mit.edu/courses/15-s12-blockchain-and-money-fall-2018/</a></p>
 <p>The syllabus will be roughly the same but we will go with higher speed (hopefully) as this is not supposed to be a class but a reading seminar.</p>
 </div>
