--- a/index.html
+++ b/index.html
@@ -385,6 +385,10 @@ slides) are available here:</p>
 <p>The syllabus will be roughly the same but we will go with higher
 speed (hopefully) as this is not supposed to be a class but a reading
 seminar.</p>
+<p>A comprehensive book for a course taught on Coursera and at
+Princeton.</p>
+<p><a href="https://bitcoinbook.cs.princeton.edu/">Bitcoin and
+Cryptocurrency Technologies</a></p>
 </div>
 <div id="tentative-schedule" class="section level2">
 <h2>Tentative Schedule</h2>
