--- a/index.html
+++ b/index.html
@@ -379,6 +379,13 @@ pre code {
 <p>A comprehensive book for a course taught on Coursera and at Princeton.</p>
 <p><a href="https://bitcoinbook.cs.princeton.edu/">Bitcoin and Cryptocurrency Technologies</a></p>
 <p><a href="https://bitcoin.org/bitcoin.pdf">Original paper by Satoshi Nakamoto</a></p>
+<div id="youtube-videos" class="section level3">
+<h3>YouTube videos</h3>
+<p><a href="https://youtu.be/GSIDS_lvRv4">Public Key Cryptography</a></p>
+<p><a href="https://youtu.be/DMtFhACPnTY">SHA: Secure Hashing Algorithm</a></p>
+<p><a href="https://youtu.be/s22eJ1eVLTU">Digital Signature</a></p>
+<p><a href="https://youtu.be/bBC-nXj3Ng4">How does Bitcoin work</a></p>
+</div>
 </div>
 <div id="tentative-schedule" class="section level2">
 <h2>Tentative Schedule</h2>
