--- a/index.html
+++ b/index.html
@@ -390,6 +390,17 @@ Princeton.</p>
 <p><a href="https://bitcoinbook.cs.princeton.edu/">Bitcoin and
 Cryptocurrency Technologies</a></p>
 </div>
+<div id="how-to-encryptdecrypt-file-using-openssl" class="section level2">
+<h2>How to encrypt/decrypt file using openssl</h2>
+<p>To generate a private key using RSA</p>
+<pre><code>openssl genpkey -algorithm RSA -out private_key.pem -pkeyopt rsa_keygen_bits:2048</code></pre>
+<p>To generate public key</p>
+<pre><code>openssl rsa -pubout -in private_key.pem -out public_key.pem</code></pre>
+<p>To encode a file</p>
+<pre><code>openssl rsautl -encrypt -pubin -inkey public_key.pem -in test -out test.enc</code></pre>
+<p>To decode a file</p>
+<pre><code>openssl rsautl -decrypt -ssl -inkey private_key.pem -in test.enc -out test.dec</code></pre>
+</div>
 <div id="tentative-schedule" class="section level2">
 <h2>Tentative Schedule</h2>
 <p>We skip some weeks due to breaks/important meetings.</p>
