--- a/index.html
+++ b/index.html
@@ -430,23 +430,23 @@ pre code {
 <td>Intro to technical details</td>
 </tr>
 <tr class="odd">
-<td>April 7</td>
+<td>April 14</td>
 <td>Lan</td>
 <td>Smart contracts</td>
 </tr>
 <tr class="even">
-<td>April 14</td>
+<td>April 21</td>
+<td>Hieu</td>
+<td>Hash functions</td>
+</tr>
+<tr class="odd">
+<td>April 29</td>
 <td>Linh</td>
 <td></td>
 </tr>
-<tr class="odd">
-<td>April 21</td>
-<td>Graeme</td>
-<td></td>
-</tr>
 <tr class="even">
-<td>April 29</td>
-<td>Hieu</td>
+<td>May 05</td>
+<td>Graeme</td>
 <td></td>
 </tr>
 </tbody>
